Fixed function application whitespace

--- a/app.css
+++ b/app.css
@@ -34,11 +34,6 @@ pre {
    background: rgb(228, 246, 255);
 }
 
-.functionName {
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
 .int {
   padding-right: 2px;
   padding-left: 2px;
